tests/typecheck/should_run/T16453M2.hs
module Main (Main.main)  where
import T16453T
main = putStrLn "T16453M2"
