tests/typecheck/should_fail/tcfail199.hs
-- trac #2179

module Main where

main = "hi"
